--- a/package.json
+++ b/package.json
@@ -9,6 +9,26 @@
   "bugs": {
     "url": "https://github.com/nujarum/mklnks/issues"
   },
+  "dependencies": {
+    "chalk": "~4.1.2",
+    "minimist": "~1.2.5"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@types/jest": "^27.0.2",
+    "@types/minimist": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "concurrently": "^6.2.2",
+    "eslint": "^7.32.0",
+    "jest": "^27.2.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.58.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^1.4.7",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
+  },
   "engines": {
     "node": ">=14"
   },
@@ -17,9 +37,10 @@
     "mklnks"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "index.mjs",
   "repository": "github:nujarum/mklnks",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  },
+  "type": "module"
 }
