--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,6 +13,10 @@ name: "CodeQL"
 
 on:
   push:
+    branches: [ main ]
+    paths:
+    - src/**/*.ts
+    - test/**/*.ts
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
@@ -20,9 +24,6 @@ on:
     - src/**/*.ts
     - test/**/*.ts
   workflow_dispatch:
-    paths:
-    - src/**/*.ts
-    - test/**/*.ts
 
 jobs:
   analyze:
@@ -49,6 +50,7 @@ jobs:
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
+        config-file: ./.github/codeql/config.yml
         languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
