--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -15,14 +15,14 @@ on:
   push:
     branches: [ main ]
     paths:
-    - src/**/*.ts
-    - test/**/*.ts
+    - 'src/**/*.ts'
+    - 'test/**/*.ts'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
     paths:
-    - src/**/*.ts
-    - test/**/*.ts
+    - 'src/**/*.ts'
+    - 'test/**/*.ts'
   workflow_dispatch:
 
 jobs:
