--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "name": "nujarum",
     "url": "https://github.com/nujarum"
   },
-  "bin": "./bin/cli.mjs",
+  "bin": {
+    "mklnks": "./bin/cli.mjs"
+  },
   "bugs": {
     "url": "https://github.com/nujarum/mklnks/issues"
   },
@@ -18,8 +20,8 @@
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@types/jest": "^27.0.2",
     "@types/minimist": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "concurrently": "^6.3.0",
     "eslint": "^7.32.0",
     "jest": "^27.2.4",
