--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -7,7 +7,6 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "inlineSources": true,
-    "lib": ["ESNext"],
     "moduleResolution": "node",
     "newLine": "LF",
     "noEmitHelpers": true,
@@ -24,9 +23,6 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "stripInternal": true,
-    "types": [
-      "node",
-    ]
+    "stripInternal": true
   }
 }
