--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/nujarum/mklnks/issues"
   },
   "dependencies": {
+    "@nujarum/resolve-esm": "~1.0.0",
     "chalk": "~4.1.2",
     "minimist": "~1.2.5"
   },
@@ -20,11 +21,11 @@
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@types/jest": "^27.0.2",
     "@types/minimist": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "concurrently": "^6.3.0",
-    "eslint": "^7.32.0",
-    "jest": "^27.2.4",
+    "eslint": "^8.0.0",
+    "jest": "^27.2.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.58.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -51,14 +52,18 @@
   },
   "keywords": [
     "cli",
+    "ecmascript",
+    "esm",
     "hard",
     "hard link",
     "hardlink",
     "import.meta.resolve",
     "junction",
     "link",
+    "mjs",
     "package.json",
     "require.resolve",
+    "resolve",
     "symbolic",
     "symbolic link",
     "symlink"
@@ -73,7 +78,6 @@
   "scripts": {
     "build": "rollup -c",
     "clean": "rimraf .cache bin dist test/.tmp types",
-    "clear": "rimraf node_modules",
     "jest": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest",
     "lint": "eslint . --cache --cache-file .cache/.eslintcache",
     "test": "concurrently npm:jest npm:lint"
