--- a/.github/workflows/npm-test.yml
+++ b/.github/workflows/npm-test.yml
@@ -1,18 +1,27 @@
-name: NPM test
+name: NPM Test
 
 on:
   push:
   workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  npm-test:
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: ${{ matrix.node }}
       - run: npm ci
-      - run: npm test
+      - run: npm test --if-present
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
+        node:
+          - 14
+          - 16
