--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,7 @@ jobs:
           - 16
 
   publish-npm:
-    needs: build
+    needs: npm-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
