--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "url": "https://github.com/nujarum/mklnks/issues"
   },
   "dependencies": {
-    "chalk": "~4.1.2",
-    "minimist": "~1.2.5",
-    "resolve-esm": "~1.0.3"
+    "chalk": "~5.0.1",
+    "minimist": "~1.2.6",
+    "resolve-esm": "~1.1.2"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@types/jest": "^27.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/jest": "^28.1.8",
     "@types/minimist": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "concurrently": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
+    "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.1.0",
-    "jest": "^27.3.1",
+    "eslint": "^8.23.0",
+    "jest": "^28.1.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.58.3",
+    "rollup": "^2.78.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-ts": "^1.4.7",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4"
+    "rollup-plugin-ts": "^3.0.2",
+    "ts-jest": "^28.0.8",
+    "typescript": "^4.8.2"
   },
   "engines": {
     "node": ">=14"
@@ -44,7 +44,7 @@
   "files": [
     "bin",
     "dist",
-    "types"
+    "types/**/*.d.mts"
   ],
   "homepage": "https://github.com/nujarum/mklnks#readme",
   "imports": {
@@ -84,5 +84,5 @@
     "test": "concurrently npm:jest npm:lint"
   },
   "type": "module",
-  "types": "./types/main.d.ts"
+  "types": "./types/main.d.mts"
 }
