--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
   "dependencies": {
     "chalk": "~5.0.1",
     "minimist": "~1.2.6",
-    "resolve-esm": "~1.1.3"
+    "resolve-esm": "~1.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/jest": "^28.1.8",
     "@types/minimist": "^1.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@types/node": "^16.11.56",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.23.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.78.1",
+    "rollup": "^2.79.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^3.0.2",
     "ts-jest": "^28.0.8",
