--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "ESNext",
-    "target": "ES2020",
+    "target": "ESNext",
     "assumeChangesOnlyAffectDirectDependencies": true,
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
@@ -9,7 +9,7 @@
     "importHelpers": false,
     "incremental": true,
     "inlineSources": true,
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "bundler",
     "newLine": "LF",
     "noEmitHelpers": true,
     "noEmitOnError": true,
